--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -282,7 +282,7 @@ plugins_js  = []
 ## Marketing
 ############################
 [marketing]
-  google_analytics = ""
+  google_analytics = "UA-170809015-1"
   google_tag_manager = ""
 
 ############################
