--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -49,7 +49,7 @@ local_business_type = ""
 org_name = ""
 
 # Description for social sharing and search engines. If undefined, superuser role is used in place.
-description = ""
+description = "Kallpa Comunitaria organización política que promueve la comunidad como forma social"
 
 ############################
 ## Site Features
