--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -9,8 +9,7 @@
 ## Theme
 ############################
 
-# Choose a theme. 3f51b5
-#                 3F51B5
+# Choose a theme. 
 #   Latest themes (may require updating): https://sourcethemes.com/academic/themes/
 #   Browse built-in themes in `themes/academic/data/themes/`
 #   Browse user installed themes in `data/themes/`
@@ -49,7 +48,7 @@ local_business_type = ""
 org_name = ""
 
 # Description for social sharing and search engines. If undefined, superuser role is used in place.
-description = "Kallpa Comunitaria organización política que promueve la comunidad como forma social"
+description = "Kallpa Comunitaria organización política que promueve la comunidad como forma social."
 
 ############################
 ## Site Features
@@ -58,7 +57,7 @@ description = "Kallpa Comunitaria organización política que promueve la comuni
 # Enable source code highlighting? true/false
 # Documentation: https://sourcethemes.com/academic/docs/writing-markdown-latex/#highlighting-options
 highlight = true
-highlight_languages = ["r"]  # Add support for highlighting additional languages
+highlight_languages = ["r"]   # Add support for highlighting additional languages
 # highlight_style = "github"  # For supported styles, see https://cdnjs.com/libraries/highlight.js/
 
 # Enable LaTeX math rendering? true/false
@@ -75,7 +74,7 @@ diagram = true
 privacy_pack = false
 
 # Enable visitors to edit pages?
-#   `repo` defines the repository URL. `editable` defines which page types can be edited.
+# `repo` defines the repository URL. `editable` defines which page types can be edited.
 edit_page = {repo_url = "https://github.com/kcomunitaria/website", content_dir = "", repo_branch = "master", editable = {docs = true, page = false, post = false}}
 
 # Show related content at the bottom of pages?
