--- a/data/page_sharer.toml
+++ b/data/page_sharer.toml
@@ -3,7 +3,7 @@
 
 [[buttons]]
   id = "twitter"
-  url = "https://twitter.com/intent/tweet?url=https://kcomunitaria.netlify.app{url}&text={title}"
+  url = "https://twitter.com/intent/tweet?url={url}&text={title}"
   title = "Twitter"
   icon_pack = "fab"
   icon = "twitter"
@@ -11,7 +11,7 @@
 
 [[buttons]]
   id = "facebook"
-  url = "https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.app{url}&t={title}"
+  url = "https://www.facebook.com/sharer.php?u={url}&t={title}"
   title = "Facebook"
   icon_pack = "fab"
   icon = "facebook"
