--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -76,7 +76,7 @@ collections:
   - name: posts
     label: Posts
     label_singular: Post
-    folder: 'content/post'
+    folder: 'content/noticias'
     path: '{{slug}}/index'
     create: true  # Allow users to create new documents in this collection
     fields:  # The fields each document in this collection have
