--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -32,8 +32,8 @@
 
 [[main]]
   parent = "cultura"
-  name = "Books"
-  url = "#cultura"
+  name = "Biblioteca"
+  url = "#biblioteca"
   weight = 1
 
 [[main]]
